--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "@web3uikit/icons": "^0.2.20",
     "@web3uikit/web3": "^0.2.2",
     "buffer": "^6.0.3",
+    "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.7.1",
     "react-moralis": "^1.4.2",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3uikit": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
